update about me content

--- a/about-me.html
+++ b/about-me.html
@@ -28,19 +28,38 @@
 
     <div id="fav-movies">
         <h4>My Favourite Movies</h4>
-        <ul>
-            <li>Pulp fiction - 1994</li>
-            <li>BladeRunner 2049 - 2017</li>
-            <li>There will be Blood - 207</li>
-        </ul>
+        <ol>
+            <li>Pulp fiction - 1994
+                <a href="https://www.imdb.com/title/tt0110912/?ref_=nv_sr_srsg_0" target="_blank">
+                <img src="./resources/images/imdb_logo.png" class="imdb-logo"  alt="IMDb Logo"></a>
+            </li>
+            <li>BladeRunner 2049 - 2017
+                <a href="https://www.imdb.com/title/tt1856101/?ref_=nv_sr_srsg_0" target="_blank">
+                <img src="./resources/images/imdb_logo.png" class="imdb-logo"  alt="IMDb Logo"></a>
+            </li>
+            <li>There will be Blood - 207
+                <a href="https://www.imdb.com/title/tt0469494/?ref_=nv_sr_srsg_0" target="_blank">
+                    <img src="./resources/images/imdb_logo.png" class="imdb-logo"  alt="IMDb Logo">
+                </a>
+            </li>
+        </ol>
     </div>
 
     <div id="fav-books">
         <h4>My Favourite Books</h4>
         <ul>
-            <li>12 Rules for Life An Antidote to Chaos by <span>Jordan Peterson</span></li>
-            <li>C# 7.0 in a Nutshell The Definitive Reference by <span>Joseph Albahari, Ben Albahari</span></li>
-            <li>Why We Sleep Unlocking the Power of Sleep and Dreams by <span>Matthew Walker</span></li>
+            <li>12 Rules for Life An Antidote to Chaos by <span>Jordan Peterson</span>
+                <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3" target="_blank">
+                <img src="./resources/images/amazon-logo.png" class="amazon-logo"  alt="amazon Logo"></a>
+            </li>
+            <li>C# 7.0 in a Nutshell The Definitive Reference by <span>Joseph Albahari, Ben Albahari</span>
+                <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3" target="_blank">
+                    <img src="./resources/images/amazon-logo.png" class="amazon-logo"  alt="amazon Logo"></a>
+            </li>
+            <li>Why We Sleep Unlocking the Power of Sleep and Dreams by <span>Matthew Walker</span>
+                <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3" target="_blank">
+                    <img src="./resources/images/amazon-logo.png" class="amazon-logo"  alt="amazon Logo"></a>
+            </li>
         </ul>
     </div>
     <footer>
