add css validtor code refactored

--- a/about-me.html
+++ b/about-me.html
@@ -3,67 +3,77 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta  http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/about-me.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
     <title>About Carlos</title>
 </head>
 
 <body>
-    <a href="./index.html">Home</a>
-    <h2>Carlos Selamtaw Gebru</h2>
-    <p>I am currently pursuing my <i>Masters in Computer Science</i> at <i>Maharishi International University</i>.
-        I came from Ethiopia, one of the <b>oldest</b> country in the world.</p>
-    <div id="courses">
-        <h4>My Courses @ MIU</h4>
-        <ul>
-            <li>CS401 - MPP (<span>Modern Programming Practices</span>)</li>
-            <li>CS506A - STC Pt 1- ComPro (<span>Science and Technology of Consciousness</span>)	</li>
-            <li>CS472 - WAP (<span>Web Application Programming</span>)</li>
-            <li>CS544 - EA (<span>Enterprise Architecture</span>)</li>
-        </ul>
-    </div>
+<a href="./index.html">Home</a>
+<h2>Carlos Selamtaw Gebru</h2>
+<p>I am currently pursuing my <i>Masters in Computer Science</i> at <i>Maharishi International University</i>.
+    I came from Ethiopia, one of the <b>oldest</b> country in the world.</p>
+<div id="courses">
+    <h4>My Courses @ MIU</h4>
+    <ul>
+        <li>CS401 - MPP (<span>Modern Programming Practices</span>)</li>
+        <li>CS506A - STC Pt 1- ComPro (<span>Science and Technology of Consciousness</span>)</li>
+        <li>CS472 - WAP (<span>Web Application Programming</span>)</li>
+        <li>CS544 - EA (<span>Enterprise Architecture</span>)</li>
+    </ul>
+</div>
 
-    <div id="fav-movies">
-        <h4>My Favourite Movies</h4>
-        <ol>
-            <li>Pulp fiction - 1994
-                <a href="https://www.imdb.com/title/tt0110912/?ref_=nv_sr_srsg_0" target="_blank">
-                <img src="./resources/images/imdb_logo.png" class="imdb-logo"  alt="IMDb Logo"></a>
-            </li>
-            <li>BladeRunner 2049 - 2017
-                <a href="https://www.imdb.com/title/tt1856101/?ref_=nv_sr_srsg_0" target="_blank">
-                <img src="./resources/images/imdb_logo.png" class="imdb-logo"  alt="IMDb Logo"></a>
-            </li>
-            <li>There will be Blood - 207
-                <a href="https://www.imdb.com/title/tt0469494/?ref_=nv_sr_srsg_0" target="_blank">
-                    <img src="./resources/images/imdb_logo.png" class="imdb-logo"  alt="IMDb Logo">
-                </a>
-            </li>
-        </ol>
-    </div>
+<div id="fav-movies">
+    <h4>My Favourite Movies</h4>
+    <ol>
+        <li>Pulp fiction - 1994
+            <a href="https://www.imdb.com/title/tt0110912/?ref_=nv_sr_srsg_0" target="_blank">
+                <img src="./resources/images/imdb_logo.png" class="imdb-logo" alt="IMDb Logo"></a>
+        </li>
+        <li>BladeRunner 2049 - 2017
+            <a href="https://www.imdb.com/title/tt1856101/?ref_=nv_sr_srsg_0" target="_blank">
+                <img src="./resources/images/imdb_logo.png" class="imdb-logo" alt="IMDb Logo"></a>
+        </li>
+        <li>There will be Blood - 207
+            <a href="https://www.imdb.com/title/tt0469494/?ref_=nv_sr_srsg_0" target="_blank">
+                <img src="./resources/images/imdb_logo.png" class="imdb-logo" alt="IMDb Logo">
+            </a>
+        </li>
+    </ol>
+</div>
 
-    <div id="fav-books">
-        <h4>My Favourite Books</h4>
-        <ul>
-            <li>12 Rules for Life An Antidote to Chaos by <span>Jordan Peterson</span>
-                <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3" target="_blank">
-                <img src="./resources/images/amazon-logo.png" class="amazon-logo"  alt="amazon Logo"></a>
-            </li>
-            <li>C# 7.0 in a Nutshell The Definitive Reference by <span>Joseph Albahari, Ben Albahari</span>
-                <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3" target="_blank">
-                    <img src="./resources/images/amazon-logo.png" class="amazon-logo"  alt="amazon Logo"></a>
-            </li>
-            <li>Why We Sleep Unlocking the Power of Sleep and Dreams by <span>Matthew Walker</span>
-                <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3" target="_blank">
-                    <img src="./resources/images/amazon-logo.png" class="amazon-logo"  alt="amazon Logo"></a>
-            </li>
-        </ul>
-    </div>
-    <footer>
-        <a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/about-me.html" target="_blank"><img src="./resources/images/w3c-html.png" alt="w3c html logo"></a>
-    </footer>
+<div id="fav-books">
+    <h4>My Favourite Books</h4>
+    <ul>
+        <li>12 Rules for Life An Antidote to Chaos by <span>Jordan Peterson</span>
+            <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3"
+               target="_blank">
+                <img src="./resources/images/amazon-logo.png" class="amazon-logo" alt="amazon Logo"></a>
+        </li>
+        <li>C# 7.0 in a Nutshell The Definitive Reference by <span>Joseph Albahari, Ben Albahari</span>
+            <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3"
+               target="_blank">
+                <img src="./resources/images/amazon-logo.png" class="amazon-logo" alt="amazon Logo"></a>
+        </li>
+        <li>Why We Sleep Unlocking the Power of Sleep and Dreams by <span>Matthew Walker</span>
+            <a href="https://www.amazon.com/12-Rules-for-Life-audiobook/dp/B0797Y87JC/ref=sr_1_3?crid=29L65RNIYCEI&dchild=1&keywords=12+rules+for+life&qid=1616634978&sprefix=12+rules%2Caps%2C197&sr=8-3"
+               target="_blank">
+                <img src="./resources/images/amazon-logo.png" class="amazon-logo" alt="amazon Logo"></a>
+        </li>
+    </ul>
+</div>
+<footer>
+    <a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/about-me.html" target="_blank"><img
+            src="./resources/images/w3c-html.png" alt="w3c html logo"></a>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+        <img style="border:0;width:88px;height:31px"
+             src="http://jigsaw.w3.org/css-validator/images/vcss"
+             alt="Valid CSS!"/>
+    </a>
+</footer>
 </body>
 </html>
