--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<a href="./index.html">Home</a>
+<a href="index.html">Home</a>
 <h2>Carlos Selamtaw Gebru</h2>
 <p>I am currently pursuing my <i>Masters in Computer Science</i> at <i>Maharishi International University</i>.
     I came from Ethiopia, one of the <b>oldest</b> country in the world.</p>
