--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <a href="http://twitter.com/selamtaw"><i class="fa fa-twitter"></i></a>
         <a href="https://www.linkedin.com/in/carlos-selamtaw-85763168/"><i class="fa fa-linkedin"></i></a>
     </div>
-    <p>
-        <button><a href="./about-me.html">About Me</a></button>
-    </p>
+    <div id="links">
+        <a href="./about-me.html">About Me</a>
+        <a href="./w1d2recipe/index.html">Recipe Page</a>
+        <br>
+        <br>
+    </div>
     <a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/index.html" target="_blank"><img
             src="./resources/images/w3c-html.png" alt="w3c html logo"></a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
