--- a/w1d2recipe/index.html
+++ b/w1d2recipe/index.html
@@ -127,7 +127,7 @@
     <a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/w1d2recipe/index.html"
        target="_blank"><img
             src="./images/w3c-html.png" alt="w3c html logo"></a>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/w1d2recipe/index.html" target="_blank">
         <img style="border:0;width:88px;height:31px"
              src="http://jigsaw.w3.org/css-validator/images/vcss"
              alt="Valid CSS!"/>
