--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div id="links">
         <a href="./about-me.html">About Me</a>
         <a href="./w1d2recipe/index.html">Recipe Page</a>
+        <a href="./w1d3/index.html">Rancid Tomatoes</a>
         <br>
         <br>
     </div>
