--- a/w1d3/tmnt.html
+++ b/w1d3/tmnt.html
@@ -193,8 +193,14 @@
 </div>
 
 <div class="validator">
-    <a href="https://validator.w3.org/check/referer"><img src="./images/w3c-html.png" alt="Valid HTML5"></a> <br>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="./images/w3c-css.png" alt="Valid CSS"></a>
+    <a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/w1d3/tmnt.html" target="_blank"><img
+            src="../resources/images/w3c-html.png" alt="w3c html logo"></a>
+    <br>
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/w1d3/tmnt.html  " target="_blank">
+        <img style="border:0;width:88px;height:31px"
+             src="http://jigsaw.w3.org/css-validator/images/vcss"
+             alt="Valid CSS!"/>
+    </a>
 </div>
 
 </body>
