add link for golden dome pages on the home page

--- a/golden-dome-market/login.html
+++ b/golden-dome-market/login.html
@@ -18,7 +18,7 @@
         Welcome to Golden Dome Market
     </h3>
     <div>
-        <form action="index.html" id="login-form">
+        <form action="./index.html" id="login-form">
 
             <label for="email">Email</label>
             <input id="email" type="text" placeholder="john@gmail.com">
