minor ui updates

--- a/golden-dome-market/login.html
+++ b/golden-dome-market/login.html
@@ -13,15 +13,14 @@
 <body>
 
 <div id="login-container">
-    <h3>Login</h3>
     <h3>
-        Welcome to Golden Dome Market
+        Welcome to <br> Dome Market
     </h3>
     <div>
         <form action="./index.html" id="login-form">
 
             <label for="email">Email</label>
-            <input id="email" type="text" placeholder="john@gmail.com">
+            <input id="email" type="text" placeholder="john@gmail.com" title="We'll never share your email :)">
 
             <br><br>
 
