update password validator

--- a/golden-dome-market/login.html
+++ b/golden-dome-market/login.html
@@ -25,7 +25,7 @@
             <br><br>
 
             <label for="password">Password</label>
-            <input id="password" type="password" pattern="(?=\d+)(?=[a-z]*)(?=[A-Z]*).{10,}"
+            <input id="password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}"
                    placeholder="Pass123456"
             title="should contain at least one number and one uppercase and lowercase letter and at least 10 chars">
 
