--- a/w1d5/index.html
+++ b/w1d5/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
     <p>Week 1 Day 5 JS Assignment.</p>
+    <h3>Clock</h3>
+    <p id="clock"></p>
+    <script src="./clock.js" type="text/javascript"></script>
 </body>
 </html>
