w1d5 - javascript lab assignment - update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="card">
-    <h2 >Welcome to Carlos Gebru Page</h2>
+    <h2>Welcome to Carlos Gebru Page</h2>
 
     <img src="./resources/images/carl-profile.jpg" alt="Carlos Gebru" class="profile-pic">
     <h1>Carlos Gebru</h1>
@@ -29,14 +29,24 @@
         <a href="./w1d2recipe/index.html">Recipe Page</a>
         <a href="./w1d3/tmnt.html">Rancid Tomatoes</a>
         <a href="./golden-dome-market/login.html">Golden Dome Market</a>
+        <a href="./w1d6/decoratemytext.html">Decorate</a>
         <br>
         <br>
     </div>
+    <br>
     <a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/index.html" target="_blank"><img
             src="./resources/images/w3c-html.png" alt="w3c html logo"></a>
-    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/index.html" target="_blank">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/index.html"
+       target="_blank">
         <img style="border:0;width:88px;height:31px"
              src="http://jigsaw.w3.org/css-validator/images/vcss"
+             alt="Valid CSS!"/>
+    </a>
+
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/index.html"
+       target="_blank">
+        <img style="border:0;width:88px;height:31px"
+             src="./resources/images/jshint-small.png"
              alt="Valid CSS!"/>
     </a>
 
