--- a/w1d6/decoratemytext.html
+++ b/w1d6/decoratemytext.html
@@ -34,18 +34,26 @@
 			</fieldset>
 	</div>
 
-
+	<br><br>
 	<div>
 		<a href="https://validator.w3.org/nu/?doc=https://selamtaw.github.io/cs472-wap/w1d6/decoratemytext.htmll" target="_blank"><img
-					src="../resources/images/w3c-html.png" alt="w3c html logo"></a>
+					src="../resources/images/w3c-html.png" alt="w3c html logo">
+		</a>
 		<a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/w1d6/decoratemytext.html" target="_blank">
 			<img style="border:0;width:88px;height:31px"
 					 src="http://jigsaw.w3.org/css-validator/images/vcss"
 					 alt="Valid CSS!"/>
 		</a>
+
+		<a href="https://jigsaw.w3.org/css-validator/validator?uri=https://selamtaw.github.io/cs472-wap/index.html"
+		   target="_blank">
+			<img style="border:0;width:88px;height:31px"
+				 src="../resources/images/jshint-small.png"
+				 alt="Valid CSS!"/>
+		</a>
 	</div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-	<script src="./js/decoratemytext.js" type="text/javascript"></script>
+	<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+	<script defer src="./js/decoratemytext.js" type="text/javascript"></script>
 	</body>
 </html>
