--- a/w2d3/assignment-10/webapp/index.html
+++ b/w2d3/assignment-10/webapp/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="./main.js" type="text/javascript"></script>
-    <title>WAP - Week 2 Day 3 Lab Assignment</title>
+    <script type="module" src="js/main.js" ></script>
+    <title>WAP - Week 2 Day 3 Lab Assignment 10</title>
 </head>
 <body>
-    <p>WAP - Week 2 Day 3 Lab Assignment</p>
+    <p>WAP - Week 2 Day 3 Lab Assignment 10</p>
 
 </body>
 </html>
