--- a/elibrary/books.html
+++ b/elibrary/books.html
@@ -35,7 +35,7 @@
 
     <h1 class="display-6">Books In Our Collection</h1>
     <hr>
-    <table class="table" id="booksTable">
+    <table class="table table-striped table-bordered" id="booksTable">
         <thead>
         <tr>
             <th scope="col">#</th>
