add eLibrary link on home page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <a href="./w1d3/tmnt.html">Rancid Tomatoes</a>
         <a href="./golden-dome-market/login.html">Golden Dome Market</a>
         <a href="./w1d6/decoratemytext.html">Decorate</a>
+        <a href="./elibrary/index.html">eLibrary</a>
         <br>
         <br>
     </div>
